@@ -56,7 +56,7 @@ Changes in beta release 2.5.22 (not released yet)
    - The hi, sh and fgsh colors in colorsets are no longer replaced
      by computed values if not explicit set on the same line as the
      bg, or for fgsh fg, changes. (bug #3359)
-   - Fvwmlg Buttons now redraws stretched button backgrounds correctly
+   - FvwmButtons now redraws stretched button backgrounds correctly
      on partial expose.
    - Windows with circular transient for hints may no longer crash
      fvwm with StackTransientParent style.
